--- a/public/css/adstyle.css
+++ b/public/css/adstyle.css
@@ -1,3 +1,8 @@
+
+.fondo-ad{background: url('../img/prospectos.jpg')fixed;background-size:100% 50%;}
+.fondo-ad-asp{background: url('../img/pos-vacante.jpg') fixed;background-size:100% 50%;}
+.fondo-ad-ad{background: url('../img/vacante-admin.jpg') fixed;background-size:100% 50%;}
+
 [type="radio"]:checked+label:after{
   border: 2px solid #4CAF50;
   background-color: #4CAF50;
@@ -12,6 +17,8 @@
   border-top: .1em solid #B6B6B6; 
   border-bottom: .1em solid #B6B6B6;
 }
+
+.btn-chip{border-radius: 2em;}
 .borde {
 	border: 1px solid #727272;
 }
@@ -20,6 +27,14 @@
   padding-bottom: 1em;
   margin-bottom: 1em;
 }
+.box-cv h6{font-size: 1.2em; color: #212121;}
+.box-cv h6 small{font-size: .9em; color: #727272 ;}
+
+.box-desc-expe h6{font-size: 1.1em;font-weight:500;}
+.box-desc-expe p{padding: .5rem; color: #727272 !important;}
+.box-desc-expe-left h6{font-size: 1.1em;font-weight:500;padding: .4rem 1rem .4rem 1.5rem;}
+.box-desc-expe-left h6 span{font-size: 1em;font-weight:300; color: #727272;}
+
 
 .card-contacto-admin{
 	font-family: 'Roboto Mono',sans-serif;
@@ -54,6 +69,22 @@
 	position: absolute;
 	bottom:-7em;
 }
+
+.caja-empleo{
+  font-size: .8em;
+}
+.caja-empleo h5 {
+  color: #212121;
+  margin-bottom: 0px !important;
+}
+.caja-empleo p{
+  margin: 5px 0px;
+  color: #212121;
+}
+
+.caja-empleo span {
+  color: #727272;
+}
 .contenedor {
  	margin: 0 auto;
     width: 90%; 
@@ -72,6 +103,10 @@
 	font-family: 'Roboto Condensed', sans-serif;
 	font-weight: 300;
 }
+
+.collapsible.popout > li.active >.collapsible-header >i {
+  color:#4CAF50 !important; 
+}
 .dropdown-content li>a, .dropdown-content li>span{
 	font-size: 1rem;
 	color: #388E3C;
@@ -79,6 +114,25 @@
 }
 .dropdown-content2 li>a, .dropdown-content2 li>span{
 	padding: 1rem 1rem;
+}
+
+.h-cv-prin{
+  font-size: 1.2em;
+  color: #9e9e9e !important
+}
+.h-cv{
+  font-size: .9em;
+  color: #4CAF50;
+}
+
+.img-search{margin-top: 50%;}
+.fila-cv-pers div h6{
+  font-size: .9em;
+  color: #4CAF50 !important;
+}
+.fila-cv-pers div p{
+  font-size: .85em;
+  color: #212121 !important;
 }
 
 .getbackCuenta{
@@ -92,14 +146,82 @@
   background-size: cover;
 }
 
+.lista-filtros li { padding-left: .7em;}
+.lista-filtros li a{ 
+  color: #727272;
+
+  font-weight: 400;
+  font-size: .8em;
+  letter-spacing: 0.040em;
+  line-height: 1.5em;
+  text-align: left;
+  text-transform: capitalize;
+  word-spacing: 0.035em;
+}
+.lista-filtros li a:hover{ 
+  color: #3F51B5;
+}
+
+.mblack{
+  color: #212121 !important;
+  font-weight: 300;
+}
+.min-conta{min-height: 504px;}
+.my-badge{
+  border-radius: 10px;
+  padding: .3em .5em;
+  color: #fff;
+  font-weight: 300;
+}
+.mycollapsi{ box-shadow: none;}
+.mycollapsi .collapsible-header{font-size: 1.2em;}
+
 .ico-aling{
 	position: relative;
 	bottom: -.35rem;
 }
+.ul-ability{margin: .8em 2.5em;}
+.ul-ability li{font-size: 1.1em; list-style: square;}
 
+#ul-pos-comp{
+  padding: 1em;
+  padding-top: 0em;
+}
+#ul-pos-comp li{
+  font-size: .9em;
+  text-align: left;
+  margin-top: .5em;
+}
+#ul-pos-comp li:first-child, #ul-pos-comp li:last-child{
+  text-align: right;
+}
+.ul-offi-soft{
+  padding: .3rem 1.5rem;
+}
+.ul-offi-soft li {
+  padding: .2rem 0rem;
+  color: #727272;
+  font-size: 1.1em;
+}
+.ul-res-ico li{
+  color: #212121;
+  vertical-align: top;
+  display:  inline-block;
+  margin-left: .5em;
+  width: 23%;
+}
+.ul-res-ico li i {
+  color: #727272;
+}
 
+.tabl-habili tbody td{color: #9e9e9e;}
+.tabl-habili tbody td:first-child{color: #212121;}
 td, th{padding: 10px 5px;}
 
+table.striped > tbody > tr:nth-child(odd) {
+  background-color: #e8f5e9;
+}
+.pbusqueda strong{color: #212121;}
 
 .parallax-container {
   min-height: 130px;
@@ -110,7 +232,6 @@ td, th{padding: 10px 5px;}
 .parallax-container .section {
     width: 100%;
 }
-
 
 /* label color */
    .input-field label {
@@ -167,7 +288,7 @@ td, th{padding: 10px 5px;}
     .show-on-large {
  	   display: initial !important; 
   	} 
-
+  
 }
 
 @media only screen and (max-width : 992px) {
@@ -178,5 +299,7 @@ td, th{padding: 10px 5px;}
   #index-banner .section {
     top: 10%;
   }
+  
+  .img-search{margin-top: 10%;}
   
 }
